Nim contract using Clang

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,1 @@
-# Nim
-nimcache/
-
-# Vagrant
-.vagrant/
-
-# Vim
-.*.swp
-
-# emacs
-*~
-\#*#
-.#*
-
-# Komodo
-*.komodoproject
-
-# macOS
-.DS_Store
-
+leypa_nim_packages
